--- a/app/src/main/res/layout/fragment_audio_chooser.xml
+++ b/app/src/main/res/layout/fragment_audio_chooser.xml
@@ -8,17 +8,16 @@
              tools:context="com.sunflower.catchtherainbow.Views.AudioChooserFragment"
     >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:minWidth="1000dp"
-            android:minHeight="1000dp"
-            android:id="@+id/SuperAudioChooser"
-            android:background="@drawable/background_fragment"
-            android:layout_margin="10dp"
-            android:padding="0dp">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:minWidth="1000dp"
+        android:minHeight="1000dp"
+        android:id="@+id/SuperAudioChooser"
+        android:background="@drawable/background_fragment"
+        android:layout_margin="10dp"
+        android:padding="0dp">
 
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
@@ -27,83 +26,96 @@
             app:tabMode="fixed"
             app:tabGravity="fill"
             app:tabTextColor="@color/colorForegroundSecond"
-            app:tabSelectedTextColor="@color/colorAccent"/>
+            app:tabSelectedTextColor="@color/colorForeground"
+            app:tabIndicatorColor="@color/colorForeground"/>
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_textview"
+            android:paddingTop="1dp">
+
+            <CheckBox
+                android:text="@string/select_all_musics"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/cB_isAllSelected"
+                android:layout_weight="1"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/tvSelected"
+                android:textAlignment="center"
+                android:textColor="@color/colorForeground"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:paddingTop="5dp"/>
+
+            <SearchView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_textview"
-                android:paddingTop="1dp">
+                android:id="@+id/searchViewAudio"
+                android:layout_weight="1"
+                >
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/tvSelected"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorForeground"
-                    android:textSize="16sp"
-                    android:layout_weight="1"
-                    android:paddingTop="5dp"/>
+            </SearchView>
 
-                <SearchView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/background_textview"
-                    android:id="@+id/searchViewAudio"
-                    >
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/spinnerFilter"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                />
 
-                </SearchView>
-
-                <Spinner
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/spinnerFilter"
-                    android:layout_marginRight="5dp"
-                    />
-
-            </LinearLayout>
+        </LinearLayout>
 
         <android.support.v4.view.ViewPager
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/viewPager" />
+            android:layout_height="402dp"
+            android:id="@+id/viewPager"
+            android:padding="1dp"/>
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginLeft="5dp"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp">
+
+            <Button
+                android:text="@string/conformation"
+                android:layout_width="wrap_content"
+                android:onClick="onClick"
+                android:id="@+id/bOk"
+                android:background="@drawable/background_button"
+                android:gravity="center"
+                android:layout_weight="1"
                 android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp">
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorForeground"
+                android:textSize="16sp"
+                android:layout_height="wrap_content"/>
 
-                <Button
-                    android:text="@string/conformation"
-                    android:layout_width="wrap_content"
-                    android:onClick="onClick"
-                    android:id="@+id/bOk"
-                    android:background="@drawable/background_button"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="5dp"
-                    android:textColor="@color/colorForeground"
-                    android:textSize="16sp"
-                    android:layout_height="wrap_content"/>
+            <Button
+                android:text="@string/deny"
+                android:layout_width="wrap_content"
+                android:onClick="onClick"
+                android:id="@+id/bCancel"
+                android:background="@drawable/background_button"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorForeground"
+                android:textSize="16sp"/>
+        </LinearLayout>
 
-                <Button
-                    android:text="@string/deny"
-                    android:layout_width="wrap_content"
-                    android:onClick="onClick"
-                    android:id="@+id/bCancel"
-                    android:background="@drawable/background_button"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:layout_marginTop="5dp"
-                    android:textColor="@color/colorForeground"
-                    android:textSize="16sp"/>
-            </LinearLayout>
     </LinearLayout>
 </FrameLayout>
