--- a/app/src/main/res/layout/child_folder.xml
+++ b/app/src/main/res/layout/child_folder.xml
@@ -33,7 +33,9 @@
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_gravity="center">
 
                 <ImageView
                     android:layout_height="match_parent"
