--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,10 @@
         <item name="android:windowAnimationStyle">@style/MyAnimation.Window</item>
 
         <item name="seekBarStyle">@style/SuperSeekBarStyle</item>
+        <!-- For the resting Spinner style -->
+        <item name="android:spinnerItemStyle">@style/spinnerItemStyle</item>
+        <!-- For each individual Spinner list item once clicked on -->
+        <item name="android:spinnerDropDownItemStyle">@style/spinnerDropDownItemStyle</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -34,6 +38,16 @@
     <!-- Widgets   -->
     <style name="SuperSeekBarStyle" parent="@style/Widget.AppCompat.SeekBar">
         <item name="colorAccent">@color/colorForeground</item>
-
     </style>
+
+    <style name="spinnerItemStyle">
+        <item name="android:padding">10dp</item>
+        <item name="android:textSize">@dimen/text_normal</item>
+    </style>
+
+    <style name="spinnerDropDownItemStyle">
+        <item name="android:padding">10dp</item>
+        <item name="android:textSize">@dimen/text_normal</item>
+    </style>
+
 </resources>
